Implement refresh token functionality and update client management features